templates/https/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuberlab-tls
  namespace: kuberlab
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dev.kuberlab.io
    secretName: kuberlab-tls
  rules:
  - host: dev.kuberlab.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dealer-shop
          servicePort: 80
  - http:
      paths:
        - path: /
          backend:
            serviceName: cloud-dealer
            servicePort: 8083
